@@ -1,3 +1,0 @@
-require 'rubygems'
-require 'narray'
-require 'modshogun.so'
