@@ -4,6 +4,7 @@
 	* Bugfixes:
 		- Fix gTest segfaults with GCC >= 6.0.0 [Björn Esser].
 		- Make Java and CSharp install-dir configurable [Björn Esser].
+		- Autogenerate modshogun.rb with correct module-suffix [Björn Esser].
 
 2016-02-09 Heiko Strathmann <heiko.strathmann@shogun-toolbox.org>
 
